editor-components/stats/stats22/stats22.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  .max-content {
    .wrapper {

      .left {
        align-items: flex-start;

        .subtitle,
        .title,
        .description {
          
          text-align: left;
          margin-left: 0;
          margin-right: 0;
        }

        .button-container {
          display: flex;
          flex-wrap: wrap;
          gap: var(--composer-gap-sm);

          .button,
          .button-text {
            content: "";
          }
        }
      }

      .right {
        align-items: flex-start;
        text-align: left;

        .description {
          margin-left: 0;
          margin-right: 0;
          text-align: left;
        }

        .stats-grid {
          gap: var(--composer-gap-lg);

          .card {
            display: flex;
            flex-direction: column;

            .stat-value {
              display: flex;
              align-items: baseline;

              .stat-prefix,
              .stat-number,
              .stat-suffix {
                font-size: 4rem;
                color: var(--composer-font-color-primary);
              }
            }

            .stat-subtitle,
            .stat-title,
            .stat-description {
              color: var(--composer-font-color-primary);
              margin-left: 0;
              margin-right: 0;
              text-align: left;
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container .max-content .wrapper {
    flex-direction: column;
    .right {
      gap: var(--composer-gap-md);

      .stats-grid {
        .card .stat-value {
          .stat-prefix,
          .stat-number,
          .stat-suffix {
            font-size: 3rem;
          }
        }
      }
    }
  }
}

